table태그를 이용한 코딩

--- a/05-29.html
+++ b/05-29.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
-<bdo dir="rtl">
-    What a beautiful day!
-    </bdo>
-    
-    <p>
-        The <abbr title="World Health Organization"> WHO</abbr> was founded in 1948.
-        </p>
+    <table>
+        <tr>
+          <th>Name</th>
+          <td>Jill Smith</td>
+        </tr>
+        <tr>
+          <th 
+      rowspan="2"
+      >Phone</th>
+          <td>phone-number:010-5555-7754</td>
+        </tr>
+        <tr>
+          <td>telescope:063-271-2054</td>
+        </tr>
+      </table>
 </body>
-</html>
+</html> 
