--- a/06-01.html
+++ b/06-01.html
@@ -4,14 +4,14 @@
     <title>JavaScript</title>
     <meta charset="utf-8">
     <style>
+        .h2{
+            background-color:coral;
+            text-align: center; 
+            border:2px;
+        }
         .Js{
             color:red;
-        }
-        .html{
-            color:coral;
-        }
-        .css{
-            color:teal;
+            font-weight:bold;
         }
         #Js{
             color: Green;
@@ -24,8 +24,8 @@
     <input type="button" value="night" onclick="
     document.querySelector('body').style.backgroundColor='black';
     document.querySelector('body').style.color='white';
-">
-    <input class="js" type="button" value="day" onclick="
+    ">
+    <input type="button" value="day" onclick="
     document.querySelector('body').style.backgroundColor='white';
     document.querySelector('body').style.color='black';
     ">
@@ -34,14 +34,14 @@
     <li><a href="https://www.daum.net" target="_blank"><strong>Daum</strong></a></li>
     <li><a href="https://www.facebook.com" target="_blank"><strong>Facebook</strong></a></li>
 </ol>
-<h2>JavaScript</h2>
+<h2 class="h2">JavaScript</span></h2>
 <p><div id="Js">JavaScript</div> (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level,
      dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming
-      language. Alongside <span class="html">HTML</span> and <span class="css">CSS</span>, <span class="Js">JavaScript</span> is one of the three core technologies
+      language. Alongside <span class="Js">HTML</span> and <span class="Js">CSS</span>, <span id="Js">JavaScript</span> is one of the three core technologies
        of World Wide Web content production. It is used to make webpages interactive and 
        provide online programs, including video games. The majority of websites employ it,
         and all modern web browsers support it without the need for plug-ins by means of a
-         built-in JavaScript engine. Each of the many <span class="Js">JavaScript</span> engines represent a 
+         built-in JavaScript engine. Each of the many <span id="Js">JavaScript</span> engines represent a 
          different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting 
          the spec fully, and with many engines supporting 
          additional features beyond ECMA.
