--- a/2.html
+++ b/2.html
@@ -3,45 +3,10 @@
  <head>
      <meta charset="UTF-8">
      <title>객체활용</title>
-     <script>
-       var Links={
-         setColor:function(color){
-            var alist = document.querySelectorAll('a');
-         var i = 0;
-         while(i < alist.length){
-           alist[i].style.color = color;
-           i = i + 1;
-           }
-        }
-     }
-    var Body={
-      setColor:function(color){
-        document.querySelector('body').style.color = color;
-    },
-  setBackgroundColor:function(color){
-        document.querySelector('body').style.backgroundColor =color;
-    }
-}
-        function nightDayHandler(self){
-    var target = document.querySelector('body');
-       if(self.value === 'night'){
-        Body.setBackgroundColor('black');
-         Body.setColor('white');
-         self.value = 'day';
-   
-         Links.setColor('powderblue');
-       } else {
-        Body.setBackgroundColor('white');
-         Body.setColor('black');
-         self.value = 'night';
-   
-         Links.setColor('blue');
-       }
-   }
-    </script>
+     <script src="colors.js"></script>
  </head>
  <body>
-     <h1><a href="index.html">WEB</a></h1>
+     <h1><a href="index.html">CSS</a></h1>
   <input id="night_day" type="button" value="night" onclick="
   nightDayHandler(this);
   ">
@@ -51,7 +16,7 @@
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
       </ol>
-      <h2>JavaScript</h2>
+      <h2>CSS</h2>
       <p>
         JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.
      
