--- a/3.html
+++ b/3.html
@@ -3,45 +3,10 @@
  <head>
      <meta charset="UTF-8">
      <title>객체활용</title>
-     <script>
-       var Links={
-         setColor:function(color){
-            var alist = document.querySelectorAll('a');
-         var i = 0;
-         while(i < alist.length){
-           alist[i].style.color = color;
-           i = i + 1;
-           }
-        }
-     }
-    var Body={
-      setColor:function(color){
-        document.querySelector('body').style.color = color;
-    },
-  setBackgroundColor:function(color){
-        document.querySelector('body').style.backgroundColor =color;
-    }
-}
-        function nightDayHandler(self){
-    var target = document.querySelector('body');
-       if(self.value === 'night'){
-        Body.setBackgroundColor('black');
-         Body.setColor('white');
-         self.value = 'day';
-   
-         Links.setColor('powderblue');
-       } else {
-        Body.setBackgroundColor('white');
-         Body.setColor('black');
-         self.value = 'night';
-   
-         Links.setColor('blue');
-       }
-   }
-    </script>
+     <script src="colors.js"></script>
  </head>
  <body>
-     <h1><a href="index.html">WEB</a></h1>
+     <h1><a href="index.html">JavaScript</a></h1>
   <input id="night_day" type="button" value="night" onclick="
   nightDayHandler(this);
   ">
